kuma-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kuma-service
spec:
  selector:
    app: kuma
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
