ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: root-ingress
spec:
  rules:
    - host: page.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: kuma.page.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  kuma-service
                port:
                  number: 3001
